syntax = "proto3";
package cheetah.system.compatibility;
option csharp_namespace = "Cheetah.System.Compatibility.GRPC";

service CompatibilityChecker {
  /**
    Получить уровень совместимости текущего клиента с сервером
   */
  rpc CheckCompatibility(CheckCompatibilityRequest) returns (CheckCompatibilityResponse);
}

message CheckCompatibilityRequest {
  string version = 1;
}
message CheckCompatibilityResponse {
  Status status = 1;
  enum Status {
    /**
      Версия клиента поддерживается, в обновлении нет необходимости
     */
    Supported = 0;
    /**
       Планируется окончания поддержки - за 4-24 часа до окончания
     */
    PlanningUnsupportedAfterSomeHours = 1;
    /**
      Планируется окончания поддержки - за 0-4 часа до окончания
     */
    PlanningUnsupportedSoon = 2;
    /**
      Данная версия клиента не поддерживается, если в это время клиент в битве - необходимо обновить клиент после
      окончания битвы, если клиент только что запущен или в процессе запуска - необходимо принудительное обновление
     */
    Unsupported = 3;
  }
}